Fixing spacing

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
     margin-bottom: 1rem;
   }
   .blue-card__circle {
+    display: grid;
     place-self: center;
     padding: 2rem;
     width: 11rem;
